@@ -1,8 +1,8 @@
 #!/bin/sh
 #               GMT ANIMATION 04
-#               $Id: anim_04.sh,v 1.5 2009-03-04 17:42:59 guru Exp $
+#               $Id: anim_04.sh,v 1.6 2010-12-06 04:58:45 guru Exp $
 #
-# Purpose:      Make DVD-res Quicktime movie of NY to Miami flight
+# Purpose:      Make DVD-res MP4 movie of NY to Miami flight
 # GMT progs:    gmtset, gmtmath, psbasemap, pstext, psxy, ps2raster
 # Unix progs:   awk, mkdir, rm, mv, echo, qt_export, cat
 #
@@ -47,7 +47,7 @@ while read lon lat dist; do
 done < $$.path.d
 if [ $# -eq 1 ]; then
 	echo "anim_04.sh: Made $frame frames at 480x720 pixels placed in subdirectory frames"
-#	qt_export $$/anim_0_123456.tiff --video=h263,24,100, ${name}_movie.m4v
+	convert $$/anim_0_123456.tiff ${name}_movie.m4v
 fi
 # 4. Clean up temporary files
 gmtset DOTS_PR_INCH 300
